--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<title>{{error_code}} </title>
+<title>{{error}} </title>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HDYX6FCR3E"></script>
 <script>
 		window.dataLayer = window.dataLayer || [];
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div> 
+    <div>
     <img src="{{content}}">
     </div>
 </body>
